--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
-    "start": "node index.js"    
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "http": "0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
